fix image size and photo author on tablet

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -2,8 +2,7 @@
   color: #f1f1f1;
   background-color: #616161;
 
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px;
 }
 
 .about__title {
@@ -11,7 +10,8 @@
 }
 
 .about__photo {
-  width: 600px;
+  width: 100%;
+  max-width: 600px;
   height: auto;
   border-style: none;
   padding-top: 32px;
