--- a/src/css/photo-list.css
+++ b/src/css/photo-list.css
@@ -24,6 +24,12 @@
   cursor: pointer;
 }
 
+@media (max-width: 992px) {
+  .photo-list__item {
+    height: 450px;
+  }
+}
+
 .photo-list__item-image {
   width: 100%;
 }
